build: support Java 17 as baseline for Spring AI 2.0 (#183)
Lower the compile baseline from Java 21 to Java 17 so the library builds and
runs on the minimum JDK targeted by Spring AI 2.0. Three Java 21-only usages
blocked a --release 17 compile; each is replaced with a Java 17-compatible
equivalent:

- Virtual threads (Executors.newVirtualThreadPerTaskExecutor) -> a fixed pool
  of daemon platform threads at both executor sites. Sized for blocking Bedrock
  I/O via a new configurable property
  spring.ai.agentcore.evaluations.executor-pool-size (default 10); the advisor's
  static fallback executor uses the same default.
- Pattern-matching switch in AgentCoreEvaluationClient.mapToDocument -> an
  instanceof if/else chain. Same type-check order, identical behavior.
- List.getFirst() (SequencedCollection) -> List.get(0) across affected test
  sources in the memory, browser, otel-extension, and evaluations modules.

Baseline lowered to 17 in the root pom and both examples poms.