@@ -98,8 +98,8 @@ class BrowserChatFlowIT {
 
 		List<GeneratedFile> screenshots = this.artifactStore.retrieve(sessionId);
 		assertThat(screenshots).hasSize(1);
-		assertThat(screenshots.getFirst().isImage()).isTrue();
-		assertThat(BrowserArtifacts.url(screenshots.getFirst())).hasValue("https://docs.aws.amazon.com");
+		assertThat(screenshots.get(0).isImage()).isTrue();
+		assertThat(BrowserArtifacts.url(screenshots.get(0))).hasValue("https://docs.aws.amazon.com");
 	}
 
 	@Test
@@ -143,11 +143,11 @@ class BrowserChatFlowIT {
 
 		List<GeneratedFile> screenshots1 = this.artifactStore.retrieve(session1);
 		assertThat(screenshots1).hasSize(1);
-		assertThat(screenshots1.getFirst().isImage()).isTrue();
+		assertThat(screenshots1.get(0).isImage()).isTrue();
 
 		List<GeneratedFile> screenshots2 = this.artifactStore.retrieve(session2);
 		assertThat(screenshots2).hasSize(1);
-		assertThat(screenshots2.getFirst().isImage()).isTrue();
+		assertThat(screenshots2.get(0).isImage()).isTrue();
 	}
 
 	@SpringBootApplication
